--- a/ttsx/templates/tt_user/user_center_site.html
+++ b/ttsx/templates/tt_user/user_center_site.html
@@ -6,22 +6,22 @@
 		<div class="left_menu_con clearfix">
 			<h3>用户中心</h3>
 			<ul>
-				<li><a href="user_center_info.html">· 个人信息</a></li>
-				<li><a href="user_center_order.html">· 全部订单</a></li>
-				<li><a href="user_center_site.html" class="active">· 收货地址</a></li>
+				<li><a href="/user/center_info/">· 个人信息</a></li>
+				<li><a href="/user/center_order/">· 全部订单</a></li>
+				<li><a href="/user/center_site/" class="active">· 收货地址</a></li>
 			</ul>
 		</div>
 		<div class="right_content clearfix">
 				<h3 class="common_title2">收货地址</h3>
 				<div class="site_con">
 					<dl>
-						<dt>当前地址：</dt>
-						<dd>{{ curadr }}</dd>
+						<dt>{{ addr }}</dt>
+						<dd>{{ curadr|safe }}</dd>
 					</dl>
 				</div>
 				<h3 class="common_title2">编辑地址</h3>
 				<div class="site_con">
-					<form method="post" action="user_addr">
+					<form method="post" action="/user/user_addr/">
 						<div class="form_group">
 							<label>收件人：</label>
 							<input type="text" name="name">
