--- a/ttsx/templates/base_top.html
+++ b/ttsx/templates/base_top.html
@@ -2,16 +2,20 @@
 	 {% block head%}
 	<script type="text/javascript" src="/static/js/jquery-ui.min.js"></script>
 	<script type="text/javascript" src="/static/js/slide.js"></script>
+	<script>
+    $(function () {
+        {{ no_null|safe }}
+    })
+    </script>
+
 	 {% endblock head%}
 
 
 {% block body%}
-
-
-
-
-
 	<div class="header_con">
+
+<div class="header_con">
+
 		<div class="header">
 			<div class="welcome fl">欢迎来到天天生鲜!</div>
 			<div class="fr">
@@ -19,26 +23,24 @@
 					欢迎您：<em>张 山</em>
 				</div>
 				<div class="login_btn fl">
-					<a href="tt_user/login.html">登录</a>
+					<a href="/user/login/">登录</a>
 					<span>|</span>
-					<a href="tt_user/register.html">注册</a>
+					<a href="/user/register/">注册</a>
 				</div>
 				<div class="user_link fl">
 					<span>|</span>
-					<a href="user_center_info.html">用户中心</a>
+					<a href="/user/center_info">用户中心</a>
 					<span>|</span>
 					<a href="cart.html">我的购物车</a>
 					<span>|</span>
-					<a href="user_center_order.html">我的订单</a>
+					<a href="/user/center_orde">我的订单</a>
 				</div>
 			</div>
 		</div>
 	</div>
 
-
 {% block middle_com %}
 
 {% endblock middle_com%}
-
 
 {% endblock body%}
