--- a/ttsx/templates/base_top.html
+++ b/ttsx/templates/base_top.html
@@ -16,13 +16,13 @@
 					欢迎您：<em>张 山</em>
 				</div>
 				<div class="login_btn fl">
-					<a href="tt_user/login.html">登录</a>
+					<a href="/user/login/">登录</a>
 					<span>|</span>
-					<a href="tt_user/register.html">注册</a>
+					<a href="/user/register/">注册</a>
 				</div>
 				<div class="user_link fl">
 					<span>|</span>
-					<a href="user_center_info.html">用户中心</a>
+					<a href="/user/center_info/">用户中心</a>
 					<span>|</span>
 					<a href="/cart/">我的购物车</a>
 					<span>|</span>
