--- a/ttsx/templates/tt_goods/list.html
+++ b/ttsx/templates/tt_goods/list.html
@@ -1,38 +1,7 @@
 {% extends 'base_top.html' %}
 
 {% block middle_com %}
-<<<<<<< HEAD
 
-<div class="navbar_con">
-		<div class="navbar clearfix">
-			<div class="subnav_con fl">
-				<h1>全部商品分类</h1>
-				<span></span>
-				<ul class="subnav">
-					<li><a href="/list1_1_1/" class="fruit">新鲜水果</a></li>
-					<li><a href="/list2_1_1/" class="seafood">海鲜水产</a></li>
-					<li><a href="/list3_1_1/" class="meet">猪牛羊肉</a></li>
-					<li><a href="/list4_1_1/" class="egg">禽类蛋品</a></li>
-					<li><a href="/list5_1_1/" class="vegetables">新鲜蔬菜</a></li>
-					<li><a href="/list6_1_1/" class="ice">速冻食品</a></li>
-				</ul>
-			</div>
-			<ul class="navlist fl">
-				<li><a href="/">首页</a></li>
-				<li class="interval">|</li>
-				<li><a href="">手机生鲜</a></li>
-				<li class="interval">|</li>
-				<li><a href="">抽奖</a></li>
-			</ul>
-		</div>
-	</div>
-
-	<div class="breadcrumb">
-		<a href="/">全部分类</a>
-		<span>></span>
-		<a href="#">{{ title }}</a>
-	</div>
-=======
 
     <div class="navbar_con">
         <div class="navbar clearfix">
@@ -40,12 +9,12 @@
                 <h1>全部商品分类</h1>
                 <span></span>
                 <ul class="subnav">
-                    <li><a href="/list1_1/" class="fruit">新鲜水果</a></li>
-                    <li><a href="/list2_1/" class="seafood">海鲜水产</a></li>
-                    <li><a href="/list3_1/" class="meet">猪牛羊肉</a></li>
-                    <li><a href="/list4_1/" class="egg">禽类蛋品</a></li>
-                    <li><a href="/list5_1/" class="vegetables">新鲜蔬菜</a></li>
-                    <li><a href="/list6_1/" class="ice">速冻食品</a></li>
+                    <li><a href="/list1_1_1/" class="fruit">新鲜水果</a></li>
+                    <li><a href="/list2_1_1/" class="seafood">海鲜水产</a></li>
+                    <li><a href="/list3_1_1/" class="meet">猪牛羊肉</a></li>
+                    <li><a href="/list4_1_1/" class="egg">禽类蛋品</a></li>
+                    <li><a href="/list5_1_1/" class="vegetables">新鲜蔬菜</a></li>
+                    <li><a href="/list6_1_1/" class="ice">速冻食品</a></li>
                 </ul>
             </div>
             <ul class="navlist fl">
@@ -59,11 +28,10 @@
     </div>
 
     <div class="breadcrumb">
-        <a href="#">全部分类</a>
+        <a href="/">全部分类</a>
         <span>></span>
         <a href="#">{{ title }}</a>
     </div>
->>>>>>> 8ad86d1025e14d034443174e9e2e215a81737dcf
 
     <div class="main_wrap clearfix">
         <div class="l_wrap fl clearfix">
@@ -77,48 +45,23 @@
                             <div class="prize">￥ {{ g.gprice }}</div>
                         </li>
                     {% endfor %}
-<<<<<<< HEAD
-
-				</ul>
-			</div>
-		</div>
-
-		<div class="r_wrap fr clearfix">
-			<div class="sort_bar">
-
-				<a href="/list{{ tid }}_1_1/" {% if sort == '1' %} class="active" {% endif %}>默认</a>
-
-				<a href="/list{{ tid }}_1_2/" {% if sort == '2' %} class="active" {% endif %}>价格</a>
-
-                <a href="/list{{ tid }}_1_3/" {% if sort == '3' %} class="active" {% endif %}>人气</a>
-			</div>
-
-			<ul class="goods_type_list clearfix">
-				{% for goods in goodslist %}
-                <li>
-					<a href="/{{ goods.id }}/"><img src="/static/{{ goods.gpic }}"></a>
-					<h4><a href="/{{ goods.id }}/">{{ goods.gtitle }}</a></h4>
-					<div class="operate">
-						<span class="prize">{{ goods.gprice}}</span>
-						<span class="unit">{{ goods.gprice}}/{{ goods.gunit }}</span>
-						<a href="#" class="add_goods" title="加入购物车"></a>
-					</div>
-				</li>
-                {% endfor %}
-			</ul>
-=======
-
                 </ul>
             </div>
         </div>
 
         <div class="r_wrap fr clearfix">
             <div class="sort_bar">
-                <a href="#" class="active">默认</a>
-                <a href="#">价格</a>
-                <a href="#">人气</a>
+
+                <a href="/list{{ tid }}_1_1/" {% if sort == '1' %} class="active" {% endif %}>默认</a>
+
+                <a href="/list{{ tid }}_1_2/" {% if sort == '2' %} class="active" {% endif %}>价格</a>
+
+                <a href="/list{{ tid }}_1_3/" {% if sort == '3' %} class="active" {% endif %}>人气</a>
             </div>
 
+        </div>
+
+        <div class="r_wrap fr clearfix">
             <ul class="goods_type_list clearfix">
                 {% for goods in goodslist %}
                     <li>
@@ -137,55 +80,24 @@
                     </li>
                 {% endfor %}
             </ul>
->>>>>>> 8ad86d1025e14d034443174e9e2e215a81737dcf
-
-<<<<<<< HEAD
             <div class="pagenation">
-=======
-			<div class="pagenation">
-<<<<<<< HEAD
+
                 {% if goodslist.has_previous %}
-                <a href="/list{{ tid }}_{{ goodslist.previous_page_number }}_{{ sort }}/" class="active">上一页</a>
+                    <a href="/list{{ tid }}_{{ goodslist.previous_page_number }}_{{ sort }}/" class="active">上一页</a>
                 {% else %}
                     <a href="/list{{ tid }}_1_{{ sort }}/" class="active">上一页</a>
                 {% endif %}
                 {% for pindex in goodslist.paginator.page_range %}
-                <a href="/list{{ tid }}_{{ pindex }}_{{ sort }}/" class="active">{{ pindex }}</a>
+                    <a href="/list{{ tid }}_{{ pindex }}_{{ sort }}/" class="active">{{ pindex }}</a>
                 {% endfor %}
                 {% if goodslist.has_next %}
                     <a href="/list{{ tid }}_{{ goodslist.next_page_number }}_{{ sort }}/" class="active">下一页</a>
-                    {% else %}
+                {% else %}
                     <a href="/list{{ tid }}_{{ goodslist.paginator.num_pages }}_{{ sort }}/" class="active">下一页</a>
-=======
-
->>>>>>> 7eb373ee74eed58dd40a0ea7e60c6fcc11fb9e81
-                {% if page.has_previous %}
-                    <a href="/list{{ tid }}_{{ pindex }}/" class="active">上一页</a>
                 {% endif %}
-                {% for pindex in goodslist.paginator.page_range %}
-                    <a href="/list{{ tid }}_{{ pindex }}/" class="active">{{ pindex }}</a>
-                {% endfor %}
-                {% if page.has_next %}
 
-                    <a href="/list{{ tid }}_{{ pindex }}/" class="active">下一页</a>
->>>>>>> 8ad86d1025e14d034443174e9e2e215a81737dcf
-                {% endif %}
-<<<<<<< HEAD
             </div>
-=======
-
-				<a href="#">上一页</a>
-				<a href="#" class="active">1</a>
-				<a href="#">2</a>
-				<a href="#">3</a>
-				<a href="#">4</a>
-				<a href="#">5</a>
-				<a href="#">下一页></a>
-
-			</div>
->>>>>>> 7eb373ee74eed58dd40a0ea7e60c6fcc11fb9e81
 
         </div>
-    </div>
-
+    </div>>
 {% endblock middle_com %}
